2012-02-21  Vanessa Gil  <vanessa.gil@artica.es>
	
	* godmode/reporting/graph_template_item_editor.php
	  godmode/reporting/graph_template_list.php
	  include/functions_reporting.php: Modified templates for combined
	graphs.

2012-02-21  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_agents.php,
	godmode/agentes/module_manager_editor_common.php: cleaned source code style.

	* include/styles/dialog.css: fixed the bad comment lines.
	
	* include/styles/pandora.css: fixed the bad comment lines and added the
	style for the button to save in visual console editor.
	
	* images/file.disabled.png: added image file for the button save in the
	visual console editor.
	
	* images/config.disabled.png: fixed the image, now the side is equal to
	enabled image.
	
	* include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php,
	godmode/reporting/visual_console_builder.editor.js,
	godmode/reporting/visual_console_builder.editor.php: added feature the save
	the movements of items when user want, and added feature the snap to grid
	the items in visual map, fixed the resize background (in some oldcases
	didn't run fine).

2012-02-21  Junichi Satoh  <junichi@rworks.jp>

	* mobile/operation/agents/view_alerts.php: Fixed sql query error.

2012-02-20  Vanessa Gil  <vanessa.gil@artica.es>
	* pandoradb.sql
	  pandoradb.oracle.sql
	  pandoradb.postgreSQL.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.oracle.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql: Added
	'tgraph_template' and 'tgraph_source_template' tables.

	* godmode/reporting/graphs.php
	  include/functions_reporting.php: Added templates for combined
	graphs.

	* godmode/reporting/graph_template_editor.php
	  godmode/reporting/graph_template_item_editor.php
	  godmode/reporting/graph_template_list.php: Added files.

2012-02-16  Vanessa Gil  <vanessa.gil@artica.es>
	* operation/events/events_list: Changed extended info
	to event list.
